# minimal-linux-bazel

./: .bazelrc  .travis.yml  BUILD  Dockerfile  README.md  WORKSPACE  busybox_utils  fetch.bzl  init  iso_image.bzl  isolinux.bzl  isolinux.cfg  kernel.bzl  qemu_run.sh  raspberry_pi.bzl  rootfs.bzl
application/raze/: BUILD  Cargo.toml  crates.bzl
application/raze/remote/: arrayvec-0.4.10.BUILD  autocfg-0.1.2.BUILD  bitflags-1.0.4.BUILD  byteorder-1.3.1.BUILD  bytes-0.4.12.BUILD  cc-1.0.31.BUILD  cfg-if-0.1.7.BUILD  cloudabi-0.0.3.BUILD  crossbeam-deque-0.7.1.BUILD  crossbeam-epoch-0.7.1.BUILD  crossbeam-queue-0.1.2.BUILD  crossbeam-utils-0.6.5.BUILD  errno-0.2.4.BUILD  errno-dragonfly-0.1.1.BUILD  fnv-1.0.6.BUILD  fuchsia-cprng-0.1.1.BUILD  fuchsia-zircon-0.3.3.BUILD  fuchsia-zircon-sys-0.3.3.BUILD  futures-0.1.25.BUILD  futures-cpupool-0.1.8.BUILD  gcc-0.3.55.BUILD  h2-0.1.17.BUILD  http-0.1.16.BUILD  httparse-1.3.3.BUILD  hyper-0.12.25.BUILD  indexmap-1.0.2.BUILD  iovec-0.1.2.BUILD  itoa-0.4.3.BUILD  kernel32-sys-0.2.2.BUILD  lazy_static-1.3.0.BUILD  lazycell-1.2.1.BUILD  libc-0.2.50.BUILD  lock_api-0.1.5.BUILD  log-0.4.6.BUILD  loopdev-0.2.1.BUILD  memoffset-0.2.1.BUILD  mio-0.6.16.BUILD  miow-0.2.1.BUILD  net2-0.2.33.BUILD  nix-0.13.0.BUILD  (+46 more)
mkpiimage/raze/: BUILD  Cargo.toml  crates.bzl
mkpiimage/raze/remote/: ansi_term-0.11.0.BUILD  atty-0.2.11.BUILD  bitflags-1.0.4.BUILD  byteorder-1.3.1.BUILD  cfg-if-0.1.7.BUILD  chrono-0.4.6.BUILD  clap-2.32.0.BUILD  fatfs-0.3.2.BUILD  fscommon-0.1.0.BUILD  heck-0.3.1.BUILD  libc-0.2.51.BUILD  log-0.4.6.BUILD  num-integer-0.1.39.BUILD  num-traits-0.2.6.BUILD  quote-0.6.11.BUILD  (+17 more)
mkrootfs/raze/: BUILD  Cargo.toml  crates.bzl
rpi_app/raze/: BUILD  Cargo.toml  crates.bzl
(+106 files in other folders)
