[package]
name = "mkpiimage"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

[lib]
path = "fake_lib.rs" 

[dependencies]
fatfs = "0.3"
fscommon = "0.1"
structopt = "0.2"

[raze]
workspace_path = "//mkpiimage/raze"
target = "x86_64-unknown-linux-gnu"
genmode = "Remote"

