[package]
name = "mkrootfs"
version = "0.1.0"
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"

[lib]
path = "fake_lib.rs" 

[dependencies]
libflate = "0.1"
cpio = "0.2"
failure = "0.1"
structopt = "0.2"

[raze]
workspace_path = "//mkrootfs/raze"
target = "x86_64-unknown-linux-gnu"
genmode = "Remote"

[raze.crates.proc-macro2.'0.4.27']
additional_flags = [
    "--cfg=use_proc_macro",
]
